// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableCell should render correctly 1`] = `
<DocumentFragment>
  <td
    class="bpk-table__cell"
  >
    Tabular data
  </td>
</DocumentFragment>
`;

exports[`BpkTableCell should render correctly with custom class 1`] = `
<DocumentFragment>
  <td
    class="bpk-table__cell test"
  >
    Tabular data
  </td>
</DocumentFragment>
`;
